--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="dark"
 primaryColor="#000000"
-backgroundColor="#ffffff"
+backgroundColor="#31312f"
 secondaryBackgroundColor="#31312f"
