--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .streamlit/secrets.toml
+random_selecta/client_secret_819347665278-n6j35bsfdfsbgp1jpgtnr97cgcgfdktn.apps.googleusercontent.com.json
 
