--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,5 @@
 [theme]
-base="light"
-primaryColor="#333333"
+backgroundColor="#191919"
+primaryColor="#1a7edb"
+textColor="FFF"
+secondaryBackgroundColor="#333333"
